tests/ui/coherence/coherence-orphan.stderr
error[E0117]: only traits defined in the current crate can be implemented for primitive types
  --> $DIR/coherence-orphan.rs:10:1
   |
LL | impl TheTrait<usize> for isize { }
   | ^^^^^---------------^^^^^-----
   | |    |                   |
   | |    |                   `isize` is not defined in the current crate
   | |    `usize` is not defined in the current crate
   | impl doesn't use only types from inside the current crate
   |
   = note: define and implement a trait or new type instead

error[E0117]: only traits defined in the current crate can be implemented for types defined outside of the crate
  --> $DIR/coherence-orphan.rs:17:1
   |
LL | impl !Send for Vec<isize> { }
   | ^^^^^^^^^^^^^^^----------
   | |              |
   | |              `Vec` is not defined in the current crate
   | impl doesn't use only types from inside the current crate
   |
   = note: define and implement a trait or new type instead

warning: cross-crate traits with a default impl, like `Send`, should not be specialized
  --> $DIR/coherence-orphan.rs:17:1
   |
LL | impl !Send for Vec<isize> { }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = warning: this will change its meaning in a future release!
   = note: for more information, see issue #93367 <https://github.com/rust-lang/rust/issues/93367>
   = note: `isize` is not a generic parameter
note: try using the same sequence of generic parameters as the struct definition
  --> $SRC_DIR/alloc/src/vec/mod.rs:LL:COL
   = note: `#[warn(suspicious_auto_trait_impls)]` on by default

error: aborting due to 2 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0117`.
